--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "travel-site",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +20,10 @@
   "dependencies": {
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1"
-  }
+  },
+  "devDependencies": {
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  },
+  "description": ""
 }
